--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/plugin-transform-react-jsx-source": "^7.16.7",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.2.8",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
