--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "hackmd-web3react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "dev": "parcel src/index.html",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build src/index.html",
+    "buildprod": "parcel build src/index.html --dist-dir ./build",
+    "deploy": "npm run build  && surge build"
   },
-  "author": "",
+  "author": "darkWingDuckCurry",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -27,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "parcel": "^2.1.0",
     "prettier": "^2.5.1",
+    "surge": "^0.23.1",
     "tslib": "^2.3.1"
   },
   "dependencies": {
@@ -34,6 +37,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.2.8",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
